# Lumen-Parser

./: .gitignore  README.md  pyproject.toml
ml/: __init__.py  agent.py
ml/tests/: test_agent.py
processing/: hierarchy_parsing.py  schemas.py  vector_store.py
processing/chunking/: bm25.py  fitz_extract.py  late_chunking.py
processing/chunking/test/: test_lc.py
processing/embeddings/: __init__.py  embedding_function.py  qwen.py
processing/embeddings/chunked_pooling/: __init__.py
processing/templates/: __init__.py  header_correction.jinja2
processing/tests/: mock_dc.py  test_hp.py  test_schemas.py  test_vs.py
